--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -67,199 +67,198 @@
       margin-bottom: 10px;
       font-size: 0.95em;
     }
-    .total-cancelado, #graficoCancelamentos, .dados-analisados, #listaCancelamentos {
+    .total-cancelado {
       background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
       padding: 15px;
+      border-radius: 12px;
+      font-weight: bold;
+      font-size: 1.1em;
       margin-bottom: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
     #graficoCancelamentos {
+      background: #fff;
+      border-radius: 12px;
+      padding: 20px;
+      margin-bottom: 30px;
+      width: 100% !important;
+      max-width: 100%;
+      height: 300px !important;
+      box-sizing: border-box;
       display: none;
     }
-    /* Chat assistente */
+    .dados-analisados {
+      text-align: center;
+      color: #555;
+      font-size: 0.95em;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+    <h1 id="tituloPainel">Cancelamentos</h1>
+  </header>
+
+  <div class="container">
+    <div class="filters">
+      <input type="date" id="dataInicio" />
+      <input type="date" id="dataFim" />
+      <select id="filtroEmpresa"></select>
+      <input type="text" id="filtroBusca" placeholder="Buscar item..." />
+    </div>
+
+    <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
+
+    <div class="total-cancelado">
+      📊 Total Cancelado: <span id="totalCancelado"><strong>R$ 0,00</strong></span>
+    </div>
+
+    <canvas id="graficoCancelamentos"></canvas>
+    <div id="listaCancelamentos"></div>
+    <div class="dados-analisados" id="resumoDados"></div>
+  </div>
+
+  <!-- Assistente DV -->
+  <div id="botaoAssistente" onclick="abrirChat()">DV</div>
+  <div id="chatAssistente">
+    <header>
+      <span>Assistente DV</span>
+      <div>
+        <button onclick="limparChat()">🧹</button>
+        <button onclick="fecharChat()">✖</button>
+      </div>
+    </header>
+    <div class="mensagens" id="mensagens"></div>
+    <div class="entrada">
+      <input type="text" id="pergunta" placeholder="Faça uma pergunta..." onkeypress="if(event.key==='Enter') responderPergunta()">
+      <button onclick="responderPergunta()">Enviar</button>
+    </div>
+  </div>
+
+  <style>
+    #botaoAssistente {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      width: 60px;
+      height: 60px;
+      background: radial-gradient(circle at 30% 30%, #25D366, #128C7E);
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-weight: bold;
+      font-size: 20px;
+      cursor: pointer;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      animation: pulsar 2s infinite ease-in-out;
+      z-index: 9999;
+    }
     #chatAssistente {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
+      bottom: 100px;
+      right: 25px;
       width: 300px;
       max-height: 400px;
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      overflow: hidden;
-      font-size: 13px;
-      display: flex;
+      display: none;
       flex-direction: column;
-      z-index: 9999;
+      z-index: 9998;
+      overflow: hidden;
     }
-    #chatMensagens {
-      flex: 1;
-      padding: 10px;
-      overflow-y: auto;
-    }
-    #chatInputWrapper {
-      display: flex;
-      border-top: 1px solid #eee;
-    }
-    #chatInputWrapper input {
-      flex: 1;
-      border: none;
-      padding: 10px;
-      font-size: 13px;
-    }
-    #chatInputWrapper button {
-      background: #25D366;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      cursor: pointer;
-    }
-    #chatHeader {
-      background: #25D366;
+    #chatAssistente header {
+      background: #128C7E;
       color: white;
       padding: 10px;
-      font-weight: bold;
-      text-align: center;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    #chatHeader button {
-      background: transparent;
+    #chatAssistente .mensagens {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      font-size: 0.9em;
+    }
+    #chatAssistente .entrada {
+      display: flex;
+      border-top: 1px solid #ccc;
+    }
+    #chatAssistente input {
+      flex: 1;
       border: none;
-      color: white;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    #chatSugestoes {
-      position: absolute;
-      bottom: 65px;
-      right: 20px;
-      width: 300px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      z-index: 9998;
-      display: none;
-    }
-    #chatSugestoes ul {
-      list-style: none;
-      margin: 0;
       padding: 10px;
     }
-    #chatSugestoes li {
-      padding: 8px;
-      border-bottom: 1px solid #eee;
+    #chatAssistente button {
+      border: none;
+      background: #128C7E;
+      color: white;
+      padding: 10px 15px;
       cursor: pointer;
     }
-    #chatSugestoes li:hover {
-      background-color: #f0f0f0;
+    @keyframes pulsar {
+      0% { box-shadow: 0 0 10px rgba(37, 211, 102, 0.4), 0 0 20px rgba(37, 211, 102, 0.3); }
+      50% { box-shadow: 0 0 20px rgba(37, 211, 102, 0.8), 0 0 40px rgba(37, 211, 102, 0.5); }
+      100% { box-shadow: 0 0 10px rgba(37, 211, 102, 0.4), 0 0 20px rgba(37, 211, 102, 0.3); }
     }
   </style>
-</head>
-<body>
 
-<!-- Painel e filtros (como já estavam no código anterior) -->
-<!-- ... OMITIDO PARA FOCO NO CHAT -->
-
-<!-- Chat Assistente Virtual -->
-<div id="chatAssistente">
-  <div id="chatHeader">
-    🤖 Assistente Virtual
-    <div>
-      <button onclick="limparConversa()">🧹</button>
-      <button onclick="fecharChat()">❌</button>
-    </div>
-  </div>
-  <div id="chatMensagens"></div>
-  <div id="chatInputWrapper">
-    <input id="chatInput" type="text" placeholder="Pergunte algo..." onkeypress="if(event.key==='Enter')responderPergunta()">
-    <button onclick="mostrarSugestoes()">📎</button>
-    <button onclick="responderPergunta()">➤</button>
-  </div>
-</div>
-<div id="chatSugestoes">
-  <ul>
-    <li onclick="usarSugestao(this.innerText)">Quanto foi cancelado mês passado?</li>
-    <li onclick="usarSugestao(this.innerText)">Qual empresa teve mais cancelamentos?</li>
-    <li onclick="usarSugestao(this.innerText)">Resumo de cancelamentos da Padaria Delícia</li>
-    <li onclick="usarSugestao(this.innerText)">Quais itens mais cancelados?</li>
-    <li onclick="usarSugestao(this.innerText)">Rodízio foi muito cancelado?</li>
-  </ul>
-</div>
-
-<script>
-  let cancelamentos = []; // usar os mesmos dados do painel principal
-
-  function responderPergunta() {
-    const input = document.getElementById("chatInput");
-    const pergunta = input.value.toLowerCase().normalize("NFD").replace(/[^\w\s]/g, "").trim();
-    if (!pergunta) return;
-    adicionarMensagem("Você", pergunta);
-    input.value = "";
-
-    let resposta = "Desculpe, não entendi sua pergunta.";
-
-    if (pergunta.includes("mes") && pergunta.includes("passado")) {
-      const mesAnterior = new Date();
-      mesAnterior.setMonth(mesAnterior.getMonth() - 1);
-      const mes = mesAnterior.toISOString().slice(0, 7);
-      const total = cancelamentos.filter(c => c.data.startsWith(mes)).reduce((a, b) => a + b.valor, 0);
-      resposta = `No mês passado foram cancelados ${formatarMoeda(total)}.`;
-    } else if (pergunta.includes("rodizio")) {
-      const total = cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio"))
-        .reduce((a, b) => a + b.valor, 0);
-      resposta = `O total de cancelamentos de rodízio foi ${formatarMoeda(total)}.`;
-    } else if (pergunta.includes("empresa") && pergunta.includes("mais")) {
-      const totais = {};
-      cancelamentos.forEach(c => totais[c.empresa] = (totais[c.empresa] || 0) + c.valor);
-      const empresaTop = Object.entries(totais).sort((a, b) => b[1] - a[1])[0];
-      resposta = `A empresa com mais cancelamentos foi ${empresaTop[0]} com ${formatarMoeda(empresaTop[1])}.`;
-    } else if (pergunta.includes("item") || pergunta.includes("produto")) {
-      const itens = {};
-      cancelamentos.forEach(c => {
-        const nome = c.item.split(" – ")[0];
-        itens[nome] = (itens[nome] || 0) + c.valor;
-      });
-      const maisCancelado = Object.entries(itens).sort((a, b) => b[1] - a[1])[0];
-      resposta = `O item mais cancelado foi ${maisCancelado[0]} com ${formatarMoeda(maisCancelado[1])}.`;
-    } else if (pergunta.includes("cancelamentos") && pergunta.includes("hoje")) {
-      const hoje = new Date().toISOString().slice(0,10);
-      const total = cancelamentos.filter(c => c.data === hoje).reduce((a, b) => a + b.valor, 0);
-      resposta = `Hoje foram cancelados ${formatarMoeda(total)}.`;
+  <script>
+    function abrirChat() {
+      document.getElementById("chatAssistente").style.display = "flex";
     }
+    function fecharChat() {
+      document.getElementById("chatAssistente").style.display = "none";
+    }
+    function limparChat() {
+      document.getElementById("mensagens").innerHTML = "";
+    }
+    function adicionarMensagem(remetente, texto) {
+      const div = document.createElement("div");
+      div.innerHTML = `<strong>${remetente}:</strong> ${texto}`;
+      document.getElementById("mensagens").appendChild(div);
+    }
+    function responderPergunta() {
+      const entrada = document.getElementById("pergunta");
+      const pergunta = entrada.value.trim().toLowerCase();
+      if (!pergunta) return;
+      adicionarMensagem("Você", pergunta);
+      entrada.value = "";
 
-    adicionarMensagem("Assistente", resposta);
-  }
+      let resposta = "Desculpe, não entendi a pergunta.";
+      const hoje = new Date().toISOString().split("T")[0];
+      const mesAtual = hoje.slice(0, 7);
 
-  function adicionarMensagem(remetente, mensagem) {
-    const chat = document.getElementById("chatMensagens");
-    const div = document.createElement("div");
-    div.innerHTML = `<strong>${remetente}:</strong> ${mensagem}`;
-    div.style.marginBottom = "8px";
-    chat.appendChild(div);
-    chat.scrollTop = chat.scrollHeight;
-  }
+      const filtradosHoje = cancelamentos.filter(c => c.data === hoje);
+      const filtradosMes = cancelamentos.filter(c => c.data.startsWith(mesAtual));
+      const totalHoje = filtradosHoje.reduce((acc, c) => acc + c.valor, 0);
+      const totalMes = filtradosMes.reduce((acc, c) => acc + c.valor, 0);
 
-  function limparConversa() {
-    document.getElementById("chatMensagens").innerHTML = "";
-  }
-
-  function fecharChat() {
-    document.getElementById("chatAssistente").style.display = "none";
-  }
-
-  function mostrarSugestoes() {
-    const box = document.getElementById("chatSugestoes");
-    box.style.display = box.style.display === "block" ? "none" : "block";
-  }
-
-  function usarSugestao(texto) {
-    document.getElementById("chatInput").value = texto;
-    document.getElementById("chatSugestoes").style.display = "none";
-    responderPergunta();
-  }
-</script>
+      if (pergunta.includes("cancelado hoje")) {
+        resposta = `Hoje foram cancelados ${formatarMoeda(totalHoje)}.`;
+      } else if (pergunta.includes("total do mês") || pergunta.includes("cancelado no mês")) {
+        resposta = `No mês atual foram cancelados ${formatarMoeda(totalMes)}.`;
+      } else if (pergunta.includes("padaria")) {
+        const padaria = filtradosMes.filter(c => c.empresa.toLowerCase().includes("padaria"));
+        const total = padaria.reduce((acc, c) => acc + c.valor, 0);
+        resposta = `A Padaria Delícia cancelou ${formatarMoeda(total)} neste mês.`;
+      } else if (pergunta.includes("rodízio")) {
+        const rodizio = filtradosMes.filter(c => c.item.toLowerCase().includes("rodízio"));
+        const total = rodizio.reduce((acc, c) => acc + c.valor, 0);
+        resposta = `Cancelamentos de rodízio neste mês: ${formatarMoeda(total)}.`;
+      } else if (pergunta.includes("qual empresa") || pergunta.includes("quem mais cancelou")) {
+        const empresas = {};
+        filtradosMes.forEach(c => empresas[c.empresa] = (empresas[c.empresa] || 0) + c.valor);
+        const top = Object.entries(empresas).sort((a, b) => b[1] - a[1])[0];
+        resposta = `A empresa que mais cancelou neste mês foi ${top[0]} com ${formatarMoeda(top[1])}.`;
+      }
+      adicionarMensagem("DV", resposta);
+    }
+  </script>
 </body>
 </html>
